--- a/Exercise2/style.css
+++ b/Exercise2/style.css
@@ -1,8 +1,108 @@
 #header{
-    height: 100px;
+    height: 50px;
+    background-color: #4d90fe;
+    font-size: 30px;
+    padding-top: 10px;
+    padding-left: 10%;
+    color: white;
+}
+body{
+    margin:0;
+    padding: 0;
+}
+.maincontainer{/*form's container*/
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 30px;
 }
 
-.maincontainer{
-    width: 80%;
-    margin-left: 10%;
+input[type="text"]{
+    border-radius: 5px;
+    width:100%;
+    height: 25px;
+    background-color: #fafafa;
+    border: 2px solid #ddd;
+    transition: 0.1s;
+    outline:none;
 }
+
+.textarea{/*class of textarea*/
+    border-radius: 5px;
+    width:100%;
+    background-color: #fafafa;
+    border: 2px solid #ccc;
+    transition: 0.1s;
+    outline:none;
+}
+
+.textarea:focus{
+    background-color: white;
+    border:2px solid #51a7e8;
+}
+
+input[type="text"]:focus{
+    background-color: white;
+    border: 2px solid #51a7e8;
+}
+
+select{
+    width:100%;
+}
+
+@media (max-width: 767px) {
+    .maincontainer{
+        margin-left: 5%;
+        width: 90%;
+    }
+}
+
+input[type="button"]{
+    height: 30px;
+    width: 47%;
+    margin-left: 2%;
+    color: white;
+    border-radius: 5px;
+    margin-bottom: 30px;
+}
+
+input[type="submit"]{
+    width: 47%;
+    margin-left: 2%;
+    background-color: #4d90fe;
+    color: white;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #4d90fe;
+    margin-bottom: 30px;
+}
+
+input[type="submit"]:hover{
+    background-color: #357ae8;
+}
+
+.greenbtn{/*button class of submit*/
+    background-color: #78c357;
+    border: 1px solid #78c357;
+}
+
+.greenbtn:hover{
+    background-color: #549d34;
+}
+
+.redbtn{/*button class of reset*/
+    background-color: #df3e3e;
+    border: 1px solid #df3e3e;
+}
+
+.redbtn:hover{
+    background-color: #ca1a1a;
+}
+
+#footer{
+    width:100%;
+    text-align: center;
+    font-family: Consolas;
+    margin-bottom: 30px;
+}
+
+::-webkit-scrollbar{width: 0}
