--- a/Exercise2/style.css
+++ b/Exercise2/style.css
@@ -21,7 +21,7 @@ input[type="text"]{
     width:100%;
     height: 25px;
     background-color: #fafafa;
-    border: 2px solid #ddd;
+    border: 1px solid #ddd;
     transition: 0.1s;
     outline:none;
 }
@@ -30,19 +30,19 @@ input[type="text"]{
     border-radius: 5px;
     width:100%;
     background-color: #fafafa;
-    border: 2px solid #ccc;
+    border: 1px solid #ccc;
     transition: 0.1s;
     outline:none;
 }
 
 .textarea:focus{
     background-color: white;
-    border:2px solid #51a7e8;
+    border:1px solid #51a7e8;
 }
 
 input[type="text"]:focus{
     background-color: white;
-    border: 2px solid #51a7e8;
+    border: 1px solid #51a7e8;
 }
 
 select{
@@ -164,4 +164,36 @@ input[type="submit"]:hover{
         width: 80%;
         margin-left: 5%;
     }
+}
+
+select{
+    background-color: white;
+    border-radius: 5px;
+    outline: none;
+}
+
+select:focus{
+    border: 1px solid #4d90fe;
+}
+
+#position{
+    height: 30px;
+}
+
+#recent{
+    height: 100px;
+    padding: 9px;
+
+}
+
+#file{
+    width: 90%;
+    padding: 5%;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+fieldset{
+    border:1px solid #ddd;
+    border-radius: 5px;
 }
