--- a/Exercise2/style.css
+++ b/Exercise2/style.css
@@ -109,7 +109,7 @@ input[type="submit"]:hover{
 
 ::-webkit-scrollbar{width: 0}
 
-.cardframe{
+.cardframe{/*style in php*/
     width: 50%;
     margin-left: 20%;
     box-shadow: 0px 5px 20px #ccc;
@@ -122,18 +122,18 @@ input[type="submit"]:hover{
     padding-right: 5%;
 }
 
-.headphoto{
+.headphoto{/*style in php*/
     width: 100%;
     height: 300px;
     background: url("http://cdn.uiccst.com/17-2-16/76139257-file_1487257680177_d30d.jpg") center;
 }
 
-.firstcard{
+.firstcard{/*style in php*/
     text-align: center;
     margin-top: -50px;
 }
 
-.imgframe{
+.imgframe{/*style in php, frame of round photo*/
     height: 200px;
     border-radius: 50%;
     margin-top: -180px;
@@ -146,14 +146,14 @@ input[type="submit"]:hover{
     background: url("img.jpg") center;
 }
 
-.cardframe ul li{
+.cardframe ul li{/*style in php*/
     list-style: upper-roman;
     font-family: "helvetica";
     padding: 10px;
     font-size: 18px;
 }
 
-.cardframe p{
+.cardframe p{/*style in php*/
     line-height: 20px;
     font-size: 18px;
     font-family: Consolas;
@@ -176,11 +176,11 @@ select:focus{
     border: 1px solid #4d90fe;
 }
 
-#position{
+#position{/*position select style*/
     height: 30px;
 }
 
-#recent{
+#recent{/*recentjob select style*/
     height: 100px;
     padding: 9px;
 }
@@ -190,7 +190,7 @@ select:focus{
         padding:0;
     }
 }
-#file{
+#file{/*upload frame*/
     width: 96%;
     padding: 2%;
     border: 1px solid #ddd;
