--- a/Exercise2/style.css
+++ b/Exercise2/style.css
@@ -105,7 +105,7 @@ input[type="submit"]:hover{
     margin-bottom: 30px;
 }
 
-::-webkit-scrollbar{width: 0}
+/*::-webkit-scrollbar{width: 0}*/
 
 .cardframe{
     width: 50%;
