--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,4 +1,4 @@
-.cal{
+.cal{/*calculator body*/
     width: 500px;
     height:600px;
     position: absolute;
@@ -10,13 +10,13 @@
     box-shadow: 0px 5px 20px #ccc;
 }
 
-#screen{
+#screen{/*calculator screen*/
     width: 100%;
     height:100px;
     box-shadow: 0px 5px 20px #ccc;
 }
 
-.button{
+.button{/*style of buttons*/
     border:1px solid #ddd;
     width: 25%;
     float: left;
@@ -26,7 +26,7 @@
     font-size: 30px;
 }
 
-.buttoncontainer{
+.buttoncontainer{/*container of buttons*/
     width:100%;
     height: 500px;
 }
