--- a/calculator/style.css
+++ b/calculator/style.css
@@ -12,7 +12,7 @@
 
 #screen{/*calculator screen*/
     width: 100%;
-    height:100px;
+    height:150px;
     box-shadow: 0px 5px 20px #ccc;
 }
 
@@ -25,10 +25,18 @@
     background-color: white;
     font-size: 30px;
 }
-
+.sbutton{/*style of buttons*/
+    border:1px solid #ddd;
+    width: 50%;
+    float: left;
+    font-family: Consolas;
+    height: 50px;
+    background-color: white;
+    font-size: 30px;
+}
 .buttoncontainer{/*container of buttons*/
     width:100%;
-    height: 500px;
+    height: 450px;
 }
 
 @media (max-width: 767px) {
