--- a/calculator/style.css
+++ b/calculator/style.css
@@ -24,6 +24,8 @@
     height: 50px;
     background-color: white;
     font-size: 30px;
+    transition: 0.1s;
+    outline: none;
 }
 .sbutton{/*style of buttons*/
     border:1px solid #ddd;
@@ -33,6 +35,8 @@
     height: 50px;
     background-color: white;
     font-size: 30px;
+    transition: 0.1s;
+    outline: none;
 }
 .buttoncontainer{/*container of buttons*/
     width:100%;
@@ -44,4 +48,12 @@
         width: 100%;
         height: 100%;
     }
+}
+
+.button:active,.sbutton:active{
+    background-color: rgba(171,221,243,0.3);
+}
+
+.button:visited,.sbutton:visited{
+    background-color: white;
 }
