--- a/calculator/style.css
+++ b/calculator/style.css
@@ -57,3 +57,27 @@
 .button:visited,.sbutton:visited{
     background-color: white;
 }
+
+#above{
+    width: 90%;
+    height: 90px;
+    text-align: right;
+    font-size: 60px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 10px;
+    overflow-x: auto;
+}
+
+#bottom{
+    width: 90%;
+    height: 40px;
+    text-align: right;
+    font-size: 30px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 10px;
+    overflow-x: auto;
+}
+
+::-webkit-scrollbar{width: 0px}
