--- a/calculator/style.css
+++ b/calculator/style.css
@@ -14,6 +14,7 @@
     width: 100%;
     height:150px;
     box-shadow: 0px 5px 20px #ccc;
+    overflow-y: hidden;
 }
 
 .button{/*style of buttons*/
@@ -27,19 +28,19 @@
     outline: none;
     border: 1px solid #ccc;
 }
-.greybg{
+.greybg{/*background of high class function*/
     background-color: #ddd;
 }
-.blue{
+.blue{/*blue font color button*/
     color: #4d90fe;
     background-color: #eee;
 }
-.equal{
+.equal{/*style of equal button*/
     background-color: #78c357;
     border: 1px solid #78c357;
     color: white;
 }
-.sbutton{/*style of buttons*/
+.sbutton{/*style of arrow button*/
     border:1px solid #eee;
     width: 50%;
     float: left;
@@ -72,7 +73,7 @@
 .equal:active{
     background-color: #549d34;
 }
-#above{
+#above{/*calculate screen*/
     width: 90%;
     height: 90px;
     text-align: right;
@@ -81,9 +82,15 @@
     padding-right: 5%;
     padding-top: 10px;
     overflow-x: auto;
+    transition: 0.1s;
+}
+@media(max-width: 767px){
+    #above{
+        margin-top: 70px;
+    }
 }
 
-#bottom{
+#bottom{/*result screen*/
     width: 90%;
     height: 40px;
     text-align: right;
@@ -93,6 +100,13 @@
     padding-top: 10px;
     overflow-x: auto;
     color: #78c357;
+    transition: 0.1s;
 }
 
+@media (max-width: 330px) {
+    #above,#bottom{
+        margin-top: 0;
+        padding-top: 0;
+    }
+}
 ::-webkit-scrollbar{width: 0px}
