--- a/calculator/style.css
+++ b/calculator/style.css
@@ -1,3 +1,6 @@
+body{
+    margin:0;
+}
 #cover{
     position: absolute;
     background-color: rgba(255,255,255,1);
@@ -7,7 +10,7 @@
     transition: 0.2s;
 }
 #center{
-    height: 300px;
+    height: 310px;
     width: 300px;
     text-align: center;
     margin: auto;
