--- a/calculator4/style.css
+++ b/calculator4/style.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
 }
-#cover{
+#cover{/*logo background*/
     position: absolute;
     background-color: rgba(255,255,255,1);
     height: 100%;
@@ -9,7 +9,7 @@ body{
     z-index: 10;
     transition: 0.2s;
 }
-#center{
+#center{/*logo container*/
     height: 310px;
     width: 300px;
     text-align: center;
@@ -99,6 +99,9 @@ body{
 .equal:active{
     background-color: #549d34;
 }
+.equal:hover{
+    background-color: #549d34;
+}
 #above{/*calculate screen*/
     width: 90%;
     height: 80px;
@@ -116,7 +119,30 @@ body{
         margin-top: 50px;
     }
 }
-
+#sum{
+    position: absolute;
+    margin:auto;
+    left: 0;
+    right:0;
+    top:0;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    background-color: white;
+    z-index: 10;
+    overflow: auto;
+    box-shadow: 0px 5px 10px #bbb;
+    transition: 0.2s;
+}
+#sumresult{
+    text-align: center;
+    width: 90%;
+    height: 180px;
+    font-size: 70px;
+    line-height: 200px;
+    margin-left: 5%;
+    margin-top:40px;
+}
 #bottom{/*result screen*/
     width: 90%;
     height: 50px;
