--- a/calculator4/nightmode.css
+++ b/calculator4/nightmode.css
@@ -22,14 +22,8 @@ body{
     color: white;
 }
 .cal{/*calculator body*/
-    width: 500px;
+    width: 100%;
     height:600px;
-    position: absolute;
-    margin:auto;
-    left: 0;
-    right:0;
-    top:0;
-    bottom:0;
     box-shadow: 0px 5px 20px #ccc;
 }
 
@@ -41,7 +35,16 @@ body{
     background-color: #333;
     color: white;
 }
-
+#main{
+    height: 700px;
+    width: 500px;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top:0;
+    bottom: 0;
+    position: absolute;
+}
 .button{/*style of buttons*/
     width: 25%;
     float: left;
@@ -54,6 +57,17 @@ body{
     box-shadow: 0px 1px 5px #000;
     border: none;
     color: #fff;
+}
+.sumbutton {
+    width: 80%;
+    margin-left: 10%;
+    height: 50px;
+    font-size: 30px;
+    color: white;
+    background-color: #2b3047;
+    border: 1px solid #2b3047;
+    border-radius: 5px;
+    margin-top: 30px;
 }
 .greybg{/*background of high class function*/
     background-color: #333;
@@ -115,9 +129,12 @@ body{
 .button:active,.sbutton:active{
     background-color: #666;
 }
-.button:hover,.sbutton:hover{
-    background-color: #666;
+@media (min-width: 1025px) {
+    .button:hover,.sbutton:hover{
+        background-color: #666;
+    }
 }
+
 
 .button:visited,.sbutton:visited{
     background-color: #333;
@@ -125,8 +142,21 @@ body{
 .equal:active{
     background-color: royalblue;
 }
-.equal:hover{
-    background-color: royalblue;
+@media (min-width: 1025px) {
+    .equal:hover{
+        background-color: royalblue;
+    }
+}
+@media (max-width: 767px) {
+    .sumbutton {
+        display: none;
+    }
+}
+@media (max-width: 767px) {
+    #main{
+        height: 100%;
+        width: 100%;
+    }
 }
 #above{/*calculate screen*/
     width: 90%;
