--- a/calculator4/style.css
+++ b/calculator4/style.css
@@ -1,18 +1,54 @@
-body{
-    margin:0;
+body {
+    margin: 0;
 }
-#cover{/*logo background*/
+
+#cover { /*logo background*/
     position: absolute;
-    background-color: rgba(255,255,255,1);
+    background-color: rgba(255, 255, 255, 1);
     height: 100%;
     width: 100%;
     z-index: 10;
     transition: 0.2s;
 }
-#center{/*logo container*/
+
+#center { /*logo container*/
     height: 310px;
     width: 300px;
     text-align: center;
+    margin: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+}
+
+.cal { /*calculator body*/
+    width: 100%;
+    height: 600px;
+    box-shadow: 0px 5px 20px #ccc;
+}
+
+.sumbutton {
+    width: 80%;
+    margin-left: 10%;
+    height: 50px;
+    font-size: 30px;
+    color: white;
+    background-color: #2b3047;
+    border: 1px solid #2b3047;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+
+@media (max-width: 767px) {
+    .sumbutton {
+        display: none;
+    }
+}
+#main{
+    height: 700px;
+    width: 500px;
     margin: auto;
     left: 0;
     right: 0;
@@ -20,26 +56,14 @@ body{
     bottom: 0;
     position: absolute;
 }
-.cal{/*calculator body*/
-    width: 500px;
-    height:600px;
-    position: absolute;
-    margin:auto;
-    left: 0;
-    right:0;
-    top:0;
-    bottom:0;
-    box-shadow: 0px 5px 20px #ccc;
-}
-
-#screen{/*calculator screen*/
+#screen { /*calculator screen*/
     width: 100%;
-    height:150px;
+    height: 150px;
     box-shadow: 0px 5px 20px #ccc;
     overflow-y: hidden;
 }
 
-.button{/*style of buttons*/
+.button { /*style of buttons*/
     width: 25%;
     float: left;
     font-family: Consolas;
@@ -51,18 +75,22 @@ body{
     box-shadow: 0px 5px 20px #ddd;
     border: none;
 }
-.greybg{/*background of high class function*/
+
+.greybg { /*background of high class function*/
     background-color: #eee;
 }
-.blue{/*blue font color button*/
+
+.blue { /*blue font color button*/
     color: deepskyblue;
     background-color: #f7f7f7;
 }
-.equal{/*style of equal button*/
+
+.equal { /*style of equal button*/
     background-color: #78c357;
     color: white;
 }
-.sbutton{/*style of arrow button*/
+
+.sbutton { /*style of arrow button*/
     border: none;
     width: 25%;
     float: left;
@@ -74,35 +102,50 @@ body{
     transition: 0.2s;
     outline: none;
 }
-.buttoncontainer{/*container of buttons*/
-    width:100%;
+
+.buttoncontainer { /*container of buttons*/
+    width: 100%;
     height: 450px;
 }
-
 @media (max-width: 767px) {
-    .cal{
+    #main{
+        height: 100%;
         width: 100%;
+    }
+}
+@media (min-width: 1025px) {
+    .button:hover, .sbutton:hover {
+        background-color: rgba(171, 221, 243, 0.3);
+    }
+}
+@media (max-width: 767px) {
+    .cal {
         height: 100%;
     }
 }
+
 /*change button's color when click*/
-.button:active,.sbutton:active{
-    background-color: rgba(171,221,243,0.3);
-}
-.button:hover,.sbutton:hover{
-    background-color: rgba(171,221,243,0.3);
+.button:active, .sbutton:active {
+    background-color: rgba(171, 221, 243, 0.3);
 }
 
-.button:visited,.sbutton:visited{
+
+
+.button:visited, .sbutton:visited {
     background-color: white;
 }
-.equal:active{
+
+.equal:active {
     background-color: #549d34;
 }
-.equal:hover{
-    background-color: #549d34;
+@media (min-width: 1025px) {
+    .equal:hover {
+        background-color: #549d34;
+    }
 }
-#above{/*calculate screen*/
+
+
+#above { /*calculate screen*/
     width: 90%;
     height: 80px;
     text-align: right;
@@ -114,17 +157,19 @@ body{
     transition: 0.2s;
     white-space: nowrap;
 }
-@media(max-width: 767px){
-    #above{
+
+@media (max-width: 767px) {
+    #above {
         margin-top: 50px;
     }
 }
-#sum{
+
+#sum {
     position: absolute;
-    margin:auto;
+    margin: auto;
     left: 0;
-    right:0;
-    top:0;
+    right: 0;
+    top: 0;
     bottom: 0;
     width: 0;
     height: 0;
@@ -134,16 +179,18 @@ body{
     box-shadow: 0px 5px 10px #bbb;
     transition: 0.2s;
 }
-#sumresult{
+
+#sumresult {
     text-align: center;
     width: 90%;
     height: 180px;
     font-size: 70px;
     line-height: 200px;
     margin-left: 5%;
-    margin-top:40px;
+    margin-top: 40px;
 }
-#bottom{/*result screen*/
+
+#bottom { /*result screen*/
     width: 90%;
     height: 50px;
     text-align: right;
@@ -156,8 +203,11 @@ body{
 }
 
 @media (max-width: 330px) {
-    #above,#bottom{
+    #above, #bottom {
         margin-top: 0;
     }
 }
-::-webkit-scrollbar{width: 0px}
+
+::-webkit-scrollbar {
+    width: 0px
+}
