you can never imagine raingod taught me cursor

--- a/calculator/nightmode.css
+++ b/calculator/nightmode.css
@@ -54,6 +54,7 @@ body{
     box-shadow: 0px 1px 5px #000;
     border: none;
     color: #fff;
+    cursor: pointer;
 }
 .greybg{/*background of high class function*/
     background-color: #333;
@@ -76,6 +77,7 @@ body{
     font-size: 30px;
     transition: 0.2s;
     outline: none;
+    cursor: pointer;
 }
 .buttoncontainer{/*container of buttons*/
     width:100%;
