--- a/Exercise2/style.css
+++ b/Exercise2/style.css
@@ -64,6 +64,7 @@ input[type="button"]{
     border-radius: 5px;
     margin-bottom: 30px;
     transition: 0.2s;
+    cursor: pointer;
 }
 
 input[type="submit"]{
@@ -76,6 +77,7 @@ input[type="submit"]{
     border: 1px solid #4d90fe;
     margin-bottom: 30px;
     transition: 0.2s;
+    cursor: pointer;
 }
 
 input[type="submit"]:hover{
