--- a/calculator4/style.css
+++ b/calculator4/style.css
@@ -74,6 +74,7 @@ body {
     outline: none;
     box-shadow: 0px 5px 20px #ddd;
     border: none;
+    cursor: pointer;
 }
 
 .greybg { /*background of high class function*/
@@ -101,6 +102,7 @@ body {
     font-size: 30px;
     transition: 0.2s;
     outline: none;
+    cursor: pointer;
 }
 
 .buttoncontainer { /*container of buttons*/
