--- a/test1/style.css
+++ b/test1/style.css
@@ -97,3 +97,18 @@ input[type="text"]{/*style of text*/
         width: 100%;
     }
 }
+
+.header{/*header of the page*/
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    color: white;
+    background-color: #4d90fe;
+    text-align: center;
+    font-size: 20px;
+    line-height: 50px;
+}
+.blank{
+    width: 100%;
+    height: 60px;
+}
