--- a/style.css
+++ b/style.css
@@ -272,18 +272,32 @@ p{
     background-color: #78c357;
 }
 .flight{/*style of calculator button*/
-    color: yellow;
-    border: 1px solid yellow;
+    color: orange;
+    border: 1px solid orange;
 }
 @media (max-width: 767px) {
     .flight{
         color: white;
-        background-color: yellow;
+        background-color: orange;
     }
 }
 .flight:hover{
     color: white;
-    background-color: yellow;
+    background-color: orange;
+}
+.login{/*style of calculator button*/
+    color: darkred;
+    border: 1px solid darkred;
+}
+@media (max-width: 767px) {
+    .login{
+        color: white;
+        background-color: darkred;
+    }
+}
+.login:hover{
+    color: white;
+    background-color: darkred;
 }
 @media(max-width: 767px){
     .favbutton1{
